test/sematest/invalid/add_classes.java
class A {
}

class B {
    public static void main(String[] args) {
        A x = new A();
        A y = new A();
        A z = x + y;
    }
}

